<resources>
    <string name="app_name">The Everyday Companion</string>
    <string name="btnCalc">Calculator</string>
    <string name="btnStop">Stopwatch</string>
    <string name="btnSnake">Play Snake</string>
    <string name="btnNotes">Notes</string>
    <string name="btnWeather">Weather</string>
    <string name="btnOpt">Toggle DarkMode</string>
    <string name="title_activity_calc">calcActivity</string>
    <string name="score">score:</string>
    <string name="start">START!</string>
    <string name="go">GO</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="up">↑</string>
    <string name="down">↓</string>
    <string name="left">←</string>
    <string name="right">→</string>
    <string name="calculator">Calculator</string>
    <string name="weather">Weather</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="notes">My Notes</string>
    <string name="newnote">New Note</string>
    <string name="rad">* sin, cos, tan input in rad</string>
    <string name="weatherreq">Enter "city, country"</string>


</resources>