<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SnakeActivity">

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="55dp"
        android:fontFamily="sans-serif-black"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:lineSpacingExtra="0sp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="20dp"
        android:text="@string/left"
        android:textAlignment="center"
        android:textSize="38sp"
        android:textStyle="bold"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDown" />

    <Button
        android:id="@+id/btnDown"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-black"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:lineSpacingExtra="0sp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="20dp"
        android:text="@string/down"
        android:textAlignment="center"
        android:textSize="38sp"
        android:textStyle="bold"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRight"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="55dp"
        android:fontFamily="sans-serif-black"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:lineSpacingExtra="0sp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="20dp"
        android:text="@string/right"
        android:textAlignment="center"
        android:textSize="38sp"

        android:textStyle="bold"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnUp" />

    <Button
        android:id="@+id/btnUp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-black"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:lineSpacingExtra="0sp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="20dp"
        android:text="@string/up"
        android:textAlignment="center"
        android:textSize="38sp"
        android:textStyle="bold"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="159dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="6dp"
        android:text="@string/score"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/go"
        android:layout_width="159dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="6dp"
        android:textAlignment="viewStart"
        android:textColor="#FF0000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="172dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/start"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/score"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.software_engineering_project.SnakeView
        android:id="@+id/snakeView"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

</androidx.constraintlayout.widget.ConstraintLayout>